[package]
name = "day2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
commons = { version = "0.1.0", path = "../commons" }
itertools = "0.10.5"
tokio = { version = "1.22", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "io-util",
] }
